@@ -5,6 +5,6 @@ DIST kiwi-gtk-1.9.36.tar.gz 697910 SHA256 2b62f89392dd66c481577c367a01bb01a8d339
 EBUILD kiwi-1.9.26.ebuild 991 SHA256 ea27ff86d4927a11323004dbba0a80ab5ba71a657dace7b7896cd8ce72501abd SHA512 d1ed9111ab2efa301fe403ce3065537e851cbe8eb0e001d10a6872e4093445abcc90af0bfcb173744fcf8ef1397e1bf855505630f351e1f27ef0ed467174e38c WHIRLPOOL d95e5efeea5a3c51b8b5ccd132d146b23258ad737ca356900acf88dccf65c13c1a71e6ff0006b7744daec3ca73c4c16b933721bd46207f1aeaa8408a5c4d0ceb
 EBUILD kiwi-1.9.34.ebuild 1434 SHA256 7a4249f5f059bd0522a2ebdea7cda4a13f7a3b314e6fbbc19145e62d70209dbc SHA512 ff399c5869cc7c74642d16f216d0042d56a8c4c4d25be61db575340da229f40a95b7d3f815a30e262e42e25d84d1e04c9e168c135c46961833c78fc05f6c28ce WHIRLPOOL 05bbfea159d4bb75151b369de58f056fa802fb62a3758ecfc214f1b8b140a599397f0a3a34ec4eca6fe156d2779e851511b21ccdf7ce5a8ad0a8c58372c73975
 EBUILD kiwi-1.9.35.ebuild 1434 SHA256 d19e4e1d898a1a18a0cd108f780980a93767640057acf3658e5a676d69bd2f5b SHA512 7db1955a96d84f2571ea25f33d1158c311e67fa8f8a4ddbd935611aabbcc611406eb395a4df72aa64c6e1e06bf23d3f2298d08468440d74771f7f203125ebb12 WHIRLPOOL 4336a0303e1c14f3ca2efd718aa2079b377fb8a7c69750daaa00afbc6bd7a9006495498132ccc2b289696e8ecc7e1655043769077c46ecef8d782bde97ed3393
-EBUILD kiwi-1.9.36.ebuild 1434 SHA256 2fdc0cce38cd93dbe65963cb88368cd73c47dcb2c340c8b6bdbc39ec41fbb26f SHA512 60c1f06829280eda21196f31930456147acd9fdae63675a907e59dd269a5e49cabc62c1c13a0e887ff4a5c1293a912d1e75aa210f00580e16bfd5d177a5c05f4 WHIRLPOOL 71990e489211a47656da602d0034338aeea764a5e0c282c270529c0352424f112d193ab3c45d82588f43f1973e85abd1b8984e032b75a22f0edf4327540f6fa9
-MISC ChangeLog 2881 SHA256 59b02be101a7fbfa113f0f52e9a861b38208107a818ea0d11ccbdffe4f155535 SHA512 3cd3e0bf0526dc9598a5f1674de2e5a726a4da4eceedbee5911b7dd34a26cee1dce6ae521a8adcf7222712146d7db11be22404b049a3a4b1da4f86981a829316 WHIRLPOOL 2e406b6dc7c208182e9cc2cb7bca59eca2db9e9074b634291f27472315536c997a24571c20ebdf87b8ed19216950907626ea8199d3ea826c04b477c58f5c7956
+EBUILD kiwi-1.9.36.ebuild 1437 SHA256 aff305e04ebb4c7af05a838a2445e7a2ce04834c94c70400326d2ff45f815317 SHA512 c0c265866836d3153025f25fcf1d7cdab375d79b89c837f8a5ff41195081489b074d0df61f270e7e4a1bf1abcecb63848b554574c04b6e23efa97af590e9bb1c WHIRLPOOL f91af11694c629b0f976b7cbf07c737cf9c0defa806da9526bd8405089e470673476c6b79301819847756a7e1cf86397e8c2ab06759db75cad1f064367f287bf
+MISC ChangeLog 2977 SHA256 45ac753a16d01ebe13dbfca918a3f5c2685ab802d4096076eeaf9da88d6bd6dd SHA512 1974cd804a7d9eb6d77d89e27174c288f527fb99bb7059f5e5cac9624eb8dbefdcbd03710157fc3edfe8480ce37ee11226da07ff0682da569993221c2931e6f2 WHIRLPOOL c04559196a5a57b9e275c3bd34308312dd76536277ed58c473fe8d4d178c6430154a59d2cb2d7279336845f1ddf934bc4cc95533197d16d963099a3a8bd84675
 MISC metadata.xml 231 SHA256 e7b1a7e45ffb2ff4e4883a70d497b182d15c67605843adfc95dc737840a8e184 SHA512 663961d1790f1b8d5c479fd9bd4ffe2d8e429f6a8fefa36c45740844d06062b71549f9f65b7ad61cc9c6e3a6eb7d395f09e25111822214b2d52e39f918e228fd WHIRLPOOL 92e6f867fe5d836adf6c71a79f2b2ae68f3865ea00ccdeaef32c21fe5164cbaca689f2368e12db8d5b754fa6420e15e242e9b75773444c53f06afa23c402fd3f
