@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pep8
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pep8/ChangeLog,v 1.9 2012/07/13 03:30:31 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pep8/ChangeLog,v 1.10 2012/12/11 17:04:39 ago Exp $
+
+  11 Dec 2012; Agostino Sarubbo <ago@gentoo.org> pep8-1.3.3.ebuild:
+  Add ~ppc64, wrt bug #416677
 
 *pep8-1.3.3 (13 Jul 2012)
 
