@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyflakes
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyflakes/ChangeLog,v 1.23 2012/11/09 16:22:17 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyflakes/ChangeLog,v 1.24 2012/12/11 17:04:55 ago Exp $
+
+  11 Dec 2012; Agostino Sarubbo <ago@gentoo.org> pyflakes-0.5.0.ebuild:
+  Add ~ppc64, wrt bug #416677
 
   10 Nov 2012; Ian Delaney <idella4@gentoo.org> pyflakes-0.5.0.ebuild:
   tests re-tested, pypy set to tests restricted, fixes Bug #No. #432560
